--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <header class="aakash-blue text-white p-6 rounded-t-lg flex flex-col sm:flex-row items-center justify-between">
             <div class="flex items-center mb-4 sm:mb-0">
                 <!-- Aakash Logo -->
-                <img src="Updated_Aakash Logo_ V15.png" alt="Aakash Logo" class="h-10 sm:h-12 mr-3">
+                <img src="Updated_Aakash Logo_ V15.png" alt="Aakash Logo"  width=10 height=7 class="h-10 sm:h-12 mr-3">
             </div>
             <div class="text-center sm:text-right">
                 <p class="text-lg font-semibold">TAKE YOUR POWER STEP (PS)</p>
