--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <img src="Updated_Aakash Logo_ V15.png" alt="Aakash Logo"  class="h-16 sm:h-20 mr-3">
             </div>
             <div class="text-center sm:text-right">
-                <p class="text-lg font-semibold">TAKE YOUR POWER STEP (PS)</p>
+                <p class="text-1.5xl sm:text-2xl font-black uppercase tracking-wide font-semibold">TAKE YOUR POWER STEP (PS)</p>
                 <p class="text-3xl sm:text-4xl font-black uppercase tracking-wide">TO REDEFINE YOUR POTENTIAL.</p>
             </div>
         </header>
