--- a/index.html
+++ b/index.html
@@ -343,6 +343,14 @@
                 <span>aakash.ac.in</span>
             </div>
         </footer>
+        <!-- Visitor Counter Section -->
+        <section class="bg-gray-100 p-4 rounded-b-lg text-center text-gray-600 text-sm mt-8">
+            <h3 class="text-lg font-semibold mb-2">Page Visitors</h3>
+            <!-- Placeholder for visitor counter image/script -->
+            <img src="https://www.cutercounter.com/hits.php?id=hxmndcx&nd=6&style=38" alt="Visitor Counter" class="mx-auto mt-2">
+            <p class="mt-2">This counter provides an estimate of page visits.</p>
+            <p class="text-xs text-gray-500 mt-1">For a live, persistent counter, you would typically use a dedicated service or backend integration.</p>
+        </section>
 
     </div>
 
