--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
                 <!-- Student 1: Shohan -->
                 <div class="success-card">
-                    <img src="https://placehold.co/120x120/0056b3/ffffff?text=Shohan" alt="Shohan" class="success-card-image">
+                    <img src="Shohan.jpg" alt="Shohan" class="success-card-image">
                     <h3 class="text-2xl font-bold text-aakash-darkblue mb-2">Shohan</h3>
                     <div class="w-full text-left mb-4">
                         <p class="text-base font-semibold text-gray-800 mb-2">JEE 2024 Status:</p>
@@ -222,7 +222,7 @@
 
                 <!-- Student 2: Rehan Khan -->
                 <div class="success-card">
-                    <img src="https://placehold.co/120x120/0056b3/ffffff?text=Rehan" alt="Rehan Khan" class="success-card-image">
+                    <img src="Rehan_Khan.jpg" alt="Rehan Khan" class="success-card-image">
                     <h3 class="text-2xl font-bold text-aakash-darkblue mb-2">Rehan Khan</h3>
                     <div class="w-full text-left mb-4">
                         <p class="text-base font-semibold text-gray-800 mb-2">JEE 2024 Status:</p>
@@ -237,7 +237,7 @@
 
                 <!-- Student 3: Harshitha.K -->
                 <div class="success-card">
-                    <img src="https://placehold.co/120x120/0056b3/ffffff?text=Harshitha" alt="Harshitha.K" class="success-card-image">
+                    <img src="Harshitha.jpg" alt="Harshitha.K" class="success-card-image">
                     <h3 class="text-2xl font-bold text-aakash-darkblue mb-2">Harshitha.K</h3>
                     <div class="w-full text-left mb-4">
                         <p class="text-base font-semibold text-gray-800 mb-2">JEE 2024 Status:</p>
@@ -252,7 +252,7 @@
 
                 <!-- Student 4: Bhargav -->
                 <div class="success-card">
-                    <img src="https://placehold.co/120x120/0056b3/ffffff?text=Bhargav" alt="Bhargav" class="success-card-image">
+                    <img src="Bhargav.jpg" alt="Bhargav" class="success-card-image">
                     <h3 class="text-2xl font-bold text-aakash-darkblue mb-2">Bhargav</h3>
                     <div class="w-full text-left mb-4">
                         <p class="text-base font-semibold text-gray-800 mb-2">JEE 2024 Status:</p>
@@ -267,7 +267,7 @@
 
                 <!-- Student 5: Adhik -->
                 <div class="success-card">
-                    <img src="https://placehold.co/120x120/0056b3/ffffff?text=Adhik" alt="Adhik" class="success-card-image">
+                    <img src="Adhik.jpg" alt="Adhik" class="success-card-image">
                     <h3 class="text-2xl font-bold text-aakash-darkblue mb-2">Adhik</h3>
                     <div class="w-full text-left mb-4">
                         <p class="text-base font-semibold text-gray-800 mb-2">JEE 2024 Status:</p>
