--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
             <div class="md:w-1/2 flex justify-center items-center">
                 <!-- Main Student Image -->
-                <img src="master.png" alt="Main Student" class="w-full max-w-sm h-auto rounded-lg shadow-lg">
+                <img src="master.png" alt="Main Student" class="w-full max-w-sm h-90 rounded-lg shadow-lg">
             </div>
         </section>
 
