--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             height: 120px;
             border-radius: 9999px; /* Full circle */
             object-fit: cover;
+            margin-top: 1rem;
             margin-bottom: 1rem;
             border: 3px solid #0056b3; /* Aakash blue border */
         }
