--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         }
         .success-card-image {
             width: 120px;
-            height: 100px;
+            height: 120px;
             border-radius: 9999px; /* Full circle */
             object-fit: cover;
-            align-items: flex-start;
+            align-items: bottom;
             margin-bottom: 1rem;
             border: 3px solid #0056b3; /* Aakash blue border */
         }
