--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
                 <!-- Student 1: Shohan -->
                 <div class="success-card">
-                    <img src="Shohan.jpg" alt="Shohan" class="success-card-image">
+                    <img src="Shohan.jpg" alt="Shohan" class="success-card-image" onerror="this.onerror=null;this.src='https://placehold.co/120x120/cccccc/333333?text=Rehan';">
                     <h3 class="text-2xl font-bold text-aakash-darkblue mb-2">Shohan</h3>
                     <div class="w-full text-left mb-4">
                         <p class="text-base font-semibold text-gray-800 mb-2">JEE 2024 Status:</p>
