--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             width: 120px;
             height: 120px;
             border-radius: 9999px; /* Full circle */
-            object-fit: cover;
-            align-items: bottom;
+            object-fit: contain;
             margin-bottom: 1rem;
             border: 3px solid #0056b3; /* Aakash blue border */
         }
@@ -79,6 +78,32 @@
             background-color: #fee2e2; /* Red light */
             color: #991b1b; /* Red dark */
         }
+	.hero-image-wrapper{
+	    position: relative;
+	    width: 100%;
+	    padding-bottom: 85%;
+	    background-color: #f0f2f5;
+	    border-radius: 0.5rem;
+	    overflow: hidden;
+	    box-shadow: 10px 10px 15px 10px rgba(255, 255, 255, 0.1), 0 4px 6px 8px rgba(0, 0, 0, 0.1);
+	}
+	.hero-image-wrapper img{
+	    position: absolute;
+	    top: 2%;
+	    left: 9%;
+	    right: 2%;
+	    bottom: 2%;
+	    width:80%;
+	    height: 95%;
+	    border-radius: 0.9rem;
+	    box-shadow: 20px 20px 25px 20px rgba(255, 255, 255, 0.1), 0 4px 6px 9px rgba(0, 0, 0, 0);
+	}
+	@media (max-width: 767px) {
+            .hero-image-wrapper {
+                padding-bottom: 100%;
+		 }
+        }
+
     </style>
 </head>
 <body class="antialiased">
@@ -103,15 +128,17 @@
                 <p class="text-lg sm:text-xl font-medium mb-4 text-gray-800 leading-relaxed">
                     You're aiming for cracking JEE. You know it takes more than just hard work — it takes direction, discipline, and the right mentorship.
                 </p>
-                <div class="bg-blue-50 border-l-4 border-aakash-blue p-4 rounded-md shadow-sm">
+                <div class="bg-blue-50 border-l-4 border-aakash-blue p-6 rounded-md shadow-sm">
                     <p class="text-gray-700 text-base sm:text-lg">
                         At Aakash, we don't just coach. We nurture ambition. With 37+ years of legacy, world-class faculty, and a rigorous academic system, we empower you with everything you need to excel — clarity in concept, consistency in effort, and confidence in outcome.
                     </p>
                 </div>
             </div>
-            <div class="md:w-1/2 flex justify-center items-center">
+            <div class="md:w-1/2 flex justify-center items-center ">
                 <!-- Main Student Image -->
-                <img src="master.png" alt="Main Student" class="w-full max-w-sm h-80 rounded-lg shadow-lg">
+	    	<div class="hero-image-wrapper">
+                	<img src="master.jpg" alt="Main Student">
+		</div>
             </div>
         </section>
 
@@ -208,7 +235,7 @@
 
                 <!-- Student 1: Shohan -->
                 <div class="success-card">
-                    <img src="Shohan.jpg" alt="Shohan" class="success-card-image" onerror="this.onerror=null;this.src='https://placehold.co/120x120/cccccc/333333?text=Rehan';">
+                    <img src="Shohan.jpg" alt="Shohan" class="success-card-image" >
                     <h3 class="text-2xl font-bold text-aakash-darkblue mb-2">Shohan</h3>
                     <div class="w-full text-left mb-4">
                         <p class="text-base font-semibold text-gray-800 mb-2">JEE 2024 Status:</p>
@@ -278,6 +305,19 @@
                         <span class="result-tag result-qualified">Qualified JEE Advanced</span>
                         <p class="text-sm text-gray-700 mt-2">Eligible for 73 courses in 22 IITs*</p>
                         <p class="text-sm text-gray-700">Eligible for CSE at NIT Calicut*</p>
+                    </div>
+                </div>
+
+                <!-- Student 6: Hansika Varma -->
+                <div class="success-card">
+                    <img src="Hansika_Varma.jpg" alt="Hansika Varma" class="success-card-image">
+                    <h3 class="text-2xl font-bold text-aakash-darkblue mb-2">Hansika Varma</h3>
+                    <div class="w-full text-left mb-4">
+                        <p class="text-base font-semibold text-gray-800 mb-3">JEE 2024 Status:</p>
+                        <span class="result-tag result-not-qualified">JEE (Advanced) 2024: Didn't Qualify</span>
+                        <p class="text-base font-semibold text-gray-800 mt-11 mb-2">JEE 2025 Result:</p>
+                        <span class="result-tag result-qualified">Qualified JEE Advanced</span>
+                        <p class="text-sm text-gray-700 mt-2">Eligible for 107 courses in 23 IITs*</p>
                     </div>
                 </div>
 
